# codec2

misc/: tnlp.c
octave/: plnlp.m
src/: CMakeLists.txt  dump.c  fdmdv.c  fmfsk.c  fsk.c
src/codebook/: CMakeLists.txt
